Email queuing and sending tools

--- a/Presentation/Aldan.Web/appsettings.json
+++ b/Presentation/Aldan.Web/appsettings.json
@@ -8,12 +8,30 @@
   },
   "AllowedHosts": "*",
   "Aldan": {
-    "ScheduleTaskUrl": "http://localhost:5000/scheduletask/runtask",
     "Data": {
       "ConnectionString": "Server=192.168.1.100;Database=aldan-framework;User=sa;Password=123"
     },
     "Security": {
       "EncryptionKey": "273ece6f97dd844d"
+    },
+    "EmailSettings": {
+      "Host": "smtp.google.com",
+      "Port": 25,
+      "EnableSsl": false,
+      "Username": "",
+      "Password": ""
+    },
+    "PlatformSettings": {
+      "Url": "http://localhost:5000/",
+      "Name": "Aldan Framework",
+      "Email": "",
+      "CompanyName": "",
+      "CompanyAddress": "",
+      "CompanyPhoneNumber": "",
+      "CompanyVat": "",
+      "FacebookLink": "",
+      "TwitterLink": "",
+      "YoutubeLink": ""
     }
   }
 }
