--- a/Presentation/Aldan.Web/Aldan.Web.csproj
+++ b/Presentation/Aldan.Web/Aldan.Web.csproj
@@ -44,6 +44,7 @@
 
     <ItemGroup>
       <Folder Include="Areas\Admin\Infrastructure" />
+      <Folder Include="Areas\Admin\Views\Shared\Components" />
     </ItemGroup>
 
 </Project>
