--- a/Presentation/Aldan.Web/Areas/Admin/sitemap.config
+++ b/Presentation/Aldan.Web/Areas/Admin/sitemap.config
@@ -18,6 +18,8 @@
                          IconClass="fa-dot-circle-o" />
             <siteMapNode SystemName="Log" title="Log" controller="Log"
                          action="List" IconClass="fa-dot-circle-o" />
+            <siteMapNode SystemName="Message templates" title="Message templates"
+                         controller="MessageTemplate" action="List"  IconClass="fa-dot-circle-o"/>
             <siteMapNode SystemName="Queued emails" title="Queued emails"
                          controller="QueuedEmail" action="List"
                          IconClass="fa-dot-circle-o" />
