Admin header links

--- a/Presentation/Aldan.Web/Aldan.Web.csproj
+++ b/Presentation/Aldan.Web/Aldan.Web.csproj
@@ -45,6 +45,7 @@
     <ItemGroup>
       <Folder Include="Areas\Admin\Infrastructure" />
       <Folder Include="Areas\Admin\Views\Shared\Components" />
+      <Folder Include="Views\Shared\Components" />
     </ItemGroup>
 
 </Project>
